--- a/src/Modules/Laser.Orchard.Cookies/Views/Parts/CookieLaw.cshtml
+++ b/src/Modules/Laser.Orchard.Cookies/Views/Parts/CookieLaw.cshtml
@@ -41,22 +41,33 @@
         var preferencesCookies = Html.Raw(Json.Encode(_defaultCookieProvider.GetPreferencesCookies()));
         var statisticalCookies = Html.Raw(Json.Encode(_defaultCookieProvider.GetStatisticalCookies()));
         var marketingCookies = Html.Raw(Json.Encode(_defaultCookieProvider.GetMarketingCookies()));
+
+        var valueToReplace = "www.";
+        var host = (!WorkContext.HttpContext.Request.IsLocal ?
+                    "." + WorkContext.HttpContext.Request.Url.Host :
+                    "");
+        if(host.Substring(0,4) == valueToReplace) {
+            host = host.Substring(4,host.Length-4);
+        }
+
         <script type="text/javascript">
             $(document).ready(function () {
-                // read list cookie and assign at general var
-                // list of TechnicalCookies
-                window.TechnicalCookies = window.TechnicalCookies || [];
-                window.TechnicalCookies = window.TechnicalCookies.concat(@technicalCookies);
-                // list of PreferencesCookies
-                window.PreferencesCookies = window.PreferencesCookies || [];
-                window.PreferencesCookies = window.PreferencesCookies.concat(@preferencesCookies);
-                // list of StatisticalCookies
-                window.StatisticalCookies = window.StatisticalCookies || [];
-                window.StatisticalCookies = window.StatisticalCookies.concat(@statisticalCookies);
-                // list of MarketingCookies
-                window.MarketingCookies = window.MarketingCookies || [];
-                window.MarketingCookies = window.MarketingCookies.concat(@marketingCookies);
-            });
+            // read list cookie and assign at general var
+            // list of TechnicalCookies
+            window.TechnicalCookies = window.TechnicalCookies || [];
+            window.TechnicalCookies = window.TechnicalCookies.concat(@technicalCookies);
+            // list of PreferencesCookies
+            window.PreferencesCookies = window.PreferencesCookies || [];
+            window.PreferencesCookies = window.PreferencesCookies.concat(@preferencesCookies);
+            // list of StatisticalCookies
+            window.StatisticalCookies = window.StatisticalCookies || [];
+            window.StatisticalCookies = window.StatisticalCookies.concat(@statisticalCookies);
+            // list of MarketingCookies
+            window.MarketingCookies = window.MarketingCookies || [];
+            window.MarketingCookies = window.MarketingCookies.concat(@marketingCookies);
+
+            window.DefaultCookieDomain = '@host';
+        });
         </script>
     }
 
