--- a/src/Modules/Laser.Orchard.Cookies/Views/Parts/CookieLaw.cshtml
+++ b/src/Modules/Laser.Orchard.Cookies/Views/Parts/CookieLaw.cshtml
@@ -44,10 +44,14 @@
 
         var valueToReplace = "www.";
         var host = (!WorkContext.HttpContext.Request.IsLocal ?
-                    "." + WorkContext.HttpContext.Request.Url.Host :
+                    WorkContext.HttpContext.Request.Url.Host :
                     "");
         if(host.Substring(0,4) == valueToReplace) {
             host = host.Substring(4,host.Length-4);
+        }
+        // added .
+        if (host != "") {
+            host = "." + host;
         }
 
         <script type="text/javascript">
