added text if resetbuttontext is empty

--- a/src/Modules/Laser.Orchard.Cookies/Views/Parts/CookieLaw.cshtml
+++ b/src/Modules/Laser.Orchard.Cookies/Views/Parts/CookieLaw.cshtml
@@ -120,6 +120,10 @@
                     cookiesettings.cookiePoweredBy = "@siteName";
                     cookiesettings.cookiePoweredByIcon = "@iconUrl";
 
+                    if (cookiesettings.cookieResetButton && cookiesettings.cookieResetButtonText == '') {
+                        cookiesettings.cookieResetButtonText = "@T("Reset Cookie")"
+                    }
+
                     $.cookieCuttr(cookiesettings);
                 });
             </script>
