--- a/src/Modules/Laser.Orchard.Cookies/Views/Parts/CookieLaw.cshtml
+++ b/src/Modules/Laser.Orchard.Cookies/Views/Parts/CookieLaw.cshtml
@@ -93,6 +93,7 @@
                     // buttons
                     cookiesettings.cookieAcceptButton = true;
                     cookiesettings.cookieAcceptButtonText = '@part.cookieAcceptButtonText';
+                    cookiesettings.cookieAcceptSelectedButtonText = '@part.cookieAcceptSelectedButtonText';
                     cookiesettings.cookieResetButton = @cookieResetButton;
                     cookiesettings.cookieResetButtonText = '@part.cookieResetButtonText';
                     cookiesettings.cookieExpectedValue = "@Html.Raw(gdprScriptService.GetCurrentCookiePrefix())";
