--- a/src/Modules/Laser.Orchard.Cookies/Styles/cookiecuttr.css
+++ b/src/Modules/Laser.Orchard.Cookies/Styles/cookiecuttr.css
@@ -18,14 +18,19 @@
     opacity: 0.9;
 }
 
-.cc-cookies a, .cc-cookies a:hover {
-    text-decoration: underline;
-}
+    .cc-cookies a, .cc-cookies a:hover {
+        text-decoration: underline;
+    }
 
 .cc-overlay {
     height: 100%;
     width: 100%;
     padding-top: 15vh;
+}
+
+.cc-banner {
+    background-color: black;
+    box-shadow: #121212 2px 2px 14px 2px
 }
 
 .cc-cookies a.cc-cookie-accept {
@@ -41,8 +46,12 @@
     -webkit-transition: background 0.25s ease-in;
     -moz-transition: background 0.25s ease-in;
 }
-
-.cc-cookie-checks a.cc-cookie-accept-selected {
+.cc-cookie-accept-selected {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+.cc-cookie-checks .cc-cookie-accept-selected a {
     display: inline-block;
     color: #fff;
     text-decoration: none;
@@ -64,7 +73,7 @@
 }
 
 .cc-cookies-reset a.cc-cookie-reset {
-    color:#fff;
+    color: #fff;
 }
 
 .cc-cookies-reset a:hover.cc-cookie-reset {
@@ -76,70 +85,82 @@
     width: 100%;
     position: sticky;
     left: 0;
-    padding:5px;
+    padding: 5px;
 }
-.cc-cookies-reset.cc-discreet {
-    width:auto;
-    display:inline-block;
-    margin-left:10px;
-}
+
+    .cc-cookies-reset.cc-discreet {
+        width: auto;
+        display: inline-block;
+        margin-left: 10px;
+    }
 
 .cc-cookie-frame {
     width: 90%;
-    max-width:670px;
-    background-color:#ccc;
-    border-radius:5px;
-    top:0px;
-    margin:0 auto;
-    padding:10px;
+    max-width: 670px;
+    background-color: #ccc;
+    border-radius: 5px;
+    top: 0px;
+    margin: 0 auto;
+    padding: 10px;
 }
+
 .cc-cookie-box {
     background-color: black;
     border-radius: 5px;
-    padding:10px;
-    margin:0px;
-    text-align:justify;
-    font-weight:normal;
+    text-align: justify;
+    font-weight: normal;
+    width: 90%;
+    max-width: 670px;
+    margin: 0px auto;
+    width: auto;
+    padding: 0px;
 }
 
-.cc-cookie-box h3 {
-    text-align:center;
-    font-size:22px;
-    font-weight:700;
-}
+    .cc-cookie-box h3 {
+        text-align: center;
+        font-size: 22px;
+        font-weight: 700;
+    }
 
-.cc-cookie-box p a {
-    font-weight:700;
-    line-height:15px;
-}
+    .cc-cookie-box p a {
+        font-weight: 700;
+        line-height: 15px;
+    }
 
-.cc-cookie-box p {
-    text-align:justify;
-    margin-bottom: 10px;
-}
+    .cc-cookie-box p {
+        text-align: justify;
+        margin-bottom: 10px;
+    }
 
-.cc-cookie-box p#ccPolicyMsgLink a:link {
-    color: #fff;
-    text-decoration: none
-}
+        .cc-cookie-box p#ccPolicyMsgLink a:link {
+            color: #fff;
+            text-decoration: none
+        }
 
-.cc-cookie-box p#ccPolicyMsgLink a:visited {
-    color: #fff;
-    text-decoration: underline
-}
+        .cc-cookie-box p#ccPolicyMsgLink a:visited {
+            color: #fff;
+            text-decoration: underline
+        }
 
-.cc-cookie-box p#ccPolicyMsgLink a:hover {
-    color: #fff;
-    text-decoration: underline
-}
+        .cc-cookie-box p#ccPolicyMsgLink a:hover {
+            color: #fff;
+            text-decoration: underline
+        }
 
-.cc-cookie-box p#ccPolicyMsgLink a:active {
-    color: #fff;
-    text-decoration: none
-}
+        .cc-cookie-box p#ccPolicyMsgLink a:active {
+            color: #fff;
+            text-decoration: none
+        }
 
-.cc-cookie-box p#ccPolicyMsgLink {
-    text-align:left;
+        .cc-cookie-box p#ccPolicyMsgLink {
+            text-align: left;
+        }
+
+.cc-cookie-checks-box {
+    display: inline-block;
+    margin: auto;
+    clear: both;
+    width: 100%
 }
 
 .cc-cookie-checks {
@@ -176,22 +197,31 @@ a.cc-expand {
         text-decoration: underline !important;
     }
 
-p#ccPoweredBy, p#ccPoweredBy a:link, p#ccPoweredBy a:visited, p#ccPoweredBy a:hover, p#ccPoweredBy a:active {
-    text-align: right;
-    color:#fff;
-    text-decoration:none;
-    font-weight:normal;
+.cc-powered-by-box {
+    position: relative;
 }
 
-.cc-cookie-checks label input[type=checkbox] {
-    display: inline-block;
-    width: 19px;
-    height: 19px;
-    margin: -2px 2px 0 10px;
-    vertical-align: middle;
-    cursor: pointer;
-    -webkit-appearance: checkbox;
+p#ccPoweredBy, p#ccPoweredBy a:link, p#ccPoweredBy a:visited, p#ccPoweredBy a:hover, p#ccPoweredBy a:active {
+    text-align: right;
+    color: #fff;
+    text-decoration: none;
+    font-weight: normal;
 }
+
+.cc-cookie-checks label {
+    margin-right: 0.5em;
+}
+
+    .cc-cookie-checks label input[type=checkbox] {
+        display: inline-block;
+        width: 19px;
+        height: 19px;
+        margin: -2px 2px 0 10px;
+        vertical-align: middle;
+        cursor: pointer;
+        margin-right: 0.5em;
+        -webkit-appearance: checkbox;
+    }
 
 @media screen and (max-width: 768px) {
     .cc-cookies a.cc-cookie-accept, .cc-cookies-reset a.cc-cookie-reset {
@@ -207,24 +237,40 @@ p#ccPoweredBy, p#ccPoweredBy a:link, p#ccPoweredBy a:visited, p#ccPoweredBy a:ho
     }
 }
 
+.cc-powered-by-left {
+    position: absolute;
+    bottom: 0px;
+    margin-bottom: 6px
+}
+
+.cc-powered-by-right {
+    position: absolute;
+    right: 0;
+    bottom: 0
+}
+
+#ccPoweredBy {
+    height: 34px
+}
+
 .cc-overlay #ccPoweredBy {
-    float: none!important;
+    float: none !important;
 }
 
 .cc-cookie-box #ccPoweredBy {
     float: left;
 }
 
-.cc-cookie-box #ccPoweredBy > div {
-    bottom: auto !important;
-}
+    .cc-cookie-box #ccPoweredBy > div {
+        bottom: auto !important;
+    }
 
-.cc-cookie-box #ccPoweredBy + div {
-    position: relative !important;
-    bottom: auto !important;
-    right: auto !important;
-    float: right;
-}
+    .cc-cookie-box #ccPoweredBy + div {
+        position: relative !important;
+        bottom: auto !important;
+        right: auto !important;
+        float: right;
+    }
 
 @media (max-width: 767px) {
     .cc-cookie-box #ccPoweredBy, .cc-cookie-box #ccPoweredBy + div {
