--- a/src/Modules/Laser.Orchard.Cookies/Views/Parts/CookieLaw.cshtml
+++ b/src/Modules/Laser.Orchard.Cookies/Views/Parts/CookieLaw.cshtml
@@ -84,7 +84,7 @@
                     cookiesettings.cookiePolicyLink = '@Html.Raw(part.cookiePolicyLink.Replace("'", "\\'"))';
                     cookiesettings.cookieMessage = cookiesettings.cookieMessage + "<p id=\"ccPolicyMsgLink\"><a href=\"" + cookiesettings.cookiePolicyLink + "\">@part.cookiePolicyPageMessage</a></p>";
                     // user options
-                    cookiesettings.cookieMessage = cookiesettings.cookieMessage + '<form><div style="display:inline-block;margin:auto;clear:both;width:100%"><div class="cc-cookie-checks">';
+                    cookiesettings.cookieMessage = cookiesettings.cookieMessage + '<form><div class="cc-cookie-checks-box"><div class="cc-cookie-checks">';
                     cookiesettings.cookieMessage = cookiesettings.cookieMessage + '@Html.Raw(gdprScriptService.GetBannerChoices())';
                     cookiesettings.cookieMessage = cookiesettings.cookieMessage + '</div></div></form>';
                     // positioning
@@ -122,7 +122,7 @@
                     cookiesettings.cookiePoweredByIcon = "@iconUrl";
 
                     if (cookiesettings.cookieResetButton && cookiesettings.cookieResetButtonText == '') {
-                        cookiesettings.cookieResetButtonText = "@T("Reset Cookie")"
+                        cookiesettings.cookieResetButtonText = "@T("Cookies")"
                     }
 
                     $.cookieCuttr(cookiesettings);
