--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/SiteSettings/FacebookShopSiteSettings.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/SiteSettings/FacebookShopSiteSettings.cshtml
@@ -31,7 +31,7 @@
         <span class="hint">@T("Id of the catalog on Facebook business")</span>
     </div>
 </fieldset>
-<fieldset>
+@*<fieldset>
     <div>
         <label for="@Html.FieldIdFor(m=>m.AppId)">@T("Facebook app id")</label>
         @Html.TextBoxFor(m => m.AppId, new { @class = "text medium" })
@@ -43,5 +43,12 @@
         <label for="@Html.FieldIdFor(m=>m.AppSecret)">@T("Secret code of the Facebook app")</label>
         @Html.TextBoxFor(m => m.AppSecret, new { @class = "text medium" })
         <span class="hint">@T("Secret code of the app on Facebook business")</span>
+    </div>
+</fieldset>*@
+<fieldset>
+    <div>
+        <label for="@Html.FieldIdFor(m=>m.AccessToken)">@T("Access Token for the Facebook Shop")</label>
+        @Html.TextBoxFor(m => m.AccessToken, new { @class = "text medium" })
+        <span class="hint">@T("This is the access token of the System User of the Facebook business")</span>
     </div>
 </fieldset>
