--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/SiteSettings/FacebookShopSiteSettings.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/SiteSettings/FacebookShopSiteSettings.cshtml
@@ -1,7 +1,10 @@
 ﻿@using Laser.Orchard.NwazetIntegration.ViewModels
 
 @model FacebookShopSiteSettingsViewModel
-
+@{
+    var confirmMessage = T("Synchronize all products on Facebook Shop catalog?").Text;
+    var redirectUrl = WorkContext.HttpContext.Request.Url.AbsoluteUri;
+}
 <fieldset>
     <div>
         <label for="@Html.FieldIdFor(m=>m.ApiBaseUrl)">@T("Api base url")</label>
@@ -32,23 +35,28 @@
     </div>
 </fieldset>
 @*<fieldset>
-    <div>
-        <label for="@Html.FieldIdFor(m=>m.AppId)">@T("Facebook app id")</label>
-        @Html.TextBoxFor(m => m.AppId, new { @class = "text medium" })
-        <span class="hint">@T("Id of the app on Facebook business")</span>
-    </div>
-</fieldset>
-<fieldset>
-    <div>
-        <label for="@Html.FieldIdFor(m=>m.AppSecret)">@T("Secret code of the Facebook app")</label>
-        @Html.TextBoxFor(m => m.AppSecret, new { @class = "text medium" })
-        <span class="hint">@T("Secret code of the app on Facebook business")</span>
-    </div>
-</fieldset>*@
+        <div>
+            <label for="@Html.FieldIdFor(m=>m.AppId)">@T("Facebook app id")</label>
+            @Html.TextBoxFor(m => m.AppId, new { @class = "text medium" })
+            <span class="hint">@T("Id of the app on Facebook business")</span>
+        </div>
+    </fieldset>
+    <fieldset>
+        <div>
+            <label for="@Html.FieldIdFor(m=>m.AppSecret)">@T("Secret code of the Facebook app")</label>
+            @Html.TextBoxFor(m => m.AppSecret, new { @class = "text medium" })
+            <span class="hint">@T("Secret code of the app on Facebook business")</span>
+        </div>
+    </fieldset>*@
 <fieldset>
     <div>
         <label for="@Html.FieldIdFor(m=>m.AccessToken)">@T("Access Token for the Facebook Shop")</label>
         @Html.TextBoxFor(m => m.AccessToken, new { @class = "text medium" })
         <span class="hint">@T("This is the access token of the System User of the Facebook business")</span>
+    </div>
+</fieldset>
+<fieldset>
+    <div>
+        @Html.ActionLink(T("Synchronize all published content on Facebook Shop"), "SyncProducts", new { area = "Laser.Orchard.NwazetIntegration", controller = "FacebookShop", redirectUrl = redirectUrl }, new { onclick = "javascript:return confirm('" + confirmMessage + "');" })
     </div>
 </fieldset>
