Test on GA4 tags and corrected some typos.

--- a/src/Modules/Laser.Orchard.GoogleAnalytics/Views/EditorTemplates/Parts/GoogleAnalyticsSettings.cshtml
+++ b/src/Modules/Laser.Orchard.GoogleAnalytics/Views/EditorTemplates/Parts/GoogleAnalyticsSettings.cshtml
@@ -65,5 +65,12 @@
         </div>
     </div>
 
+    <div class="checkbox">
+        <label for="@Html.FieldIdFor(m => m.UseGA4)" class="forcheckbox">
+            @Html.EditorFor(m => m.UseGA4, new { title = @T("Use GA4 management").Text })
+            @T("Use GA4 management")
+        </label>
+    </div>
+
 
 </fieldset>
