GA4 implementations to manage a new view model (added interface)

--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/GTMShoppingCart.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/GTMShoppingCart.cshtml
@@ -3,7 +3,7 @@
 @{
     var _GTMProductService = WorkContext.Resolve<IGTMProductService>();
     if (_GTMProductService.ShoulAddEcommerceTags()) {
-        var gtmProducts = (IEnumerable<GTMProductVM>)Model.GTMProducts;
+        var gtmProducts = (IEnumerable<IGAProductVM>)Model.GTMProducts;
 
         Script.Require("NwazetIntegration.TagManager").AtHead();
 
