--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/GTMCheckoutStep.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/GTMCheckoutStep.cshtml
@@ -5,8 +5,8 @@
     var _GTMProductService = WorkContext.Resolve<IGTMProductService>();
     Script.Require("NwazetIntegration.TagManager").AtHead();
 
-    var gtmProducts = (IEnumerable<GTMProductVM>)Model.GTMProducts
-        ?? new List<GTMProductVM>();
+    var gtmProducts = (IEnumerable<IGAProductVM>)Model.GTMProducts;
+   
     var gtmActionField = (string)Model.ActionFieldJSON ?? string.Empty;
 
     var gtmProductsStrings = gtmProducts
