Added event management for select_item, remove_from_cart and begin_checkout for GA4 tag version.

--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/Parts/Product.TagManager.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/Parts/Product.TagManager.cshtml
@@ -6,9 +6,9 @@
     if (_GTMProductService.ShoulAddEcommerceTags()) {
         IGAProductVM gtmProductVM;
         if (_GTMProductService.UseGA4()) {
-            gtmProductVM = (GA4ProductVM)Model.GA4ProductVM;
+            gtmProductVM = (GA4ProductVM)Model.ProductVM;
         } else {
-            gtmProductVM = (GTMProductVM)Model.GTMProductVM;
+            gtmProductVM = (GTMProductVM)Model.ProductVM;
         }
 
         var arrayName =
