Simple implementation:  - Checks the /Styles/Skins/ folder of the theme looking for stylesheets.  - Allows choosing which stylesheet to add.  - Accounts for minified files.

--- a/src/Modules/Laser.Orchard.AdvancedSettings/Views/EditorTemplates/Parts/ThemeSkinsPart.cshtml
+++ b/src/Modules/Laser.Orchard.AdvancedSettings/Views/EditorTemplates/Parts/ThemeSkinsPart.cshtml
@@ -1,1 +1,10 @@
-﻿PIPPO
+﻿@using Laser.Orchard.AdvancedSettings.ViewModels;
+@model ThemeSkinsPartEditViewModel
+
+<fieldset>
+    <label for="@Html.FieldIdFor(m => m.SelectedSkinName)">
+        @T("Theme Customization")
+    </label>
+    @Html.DropDownListFor(m => m.SelectedSkinName, Model.Options)
+    <span class="hint">@T("Select a customization for the frontend theme.")</span>
+</fieldset>
