Correction of typo in CheckoutViewModel.GetShoppingTotal (had 3 ps). Implementation of GA4 events "add_payment_info" and "add_shipping_info".

--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/Checkout/Review.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/Checkout/Review.cshtml
@@ -53,7 +53,7 @@
             }
             <div class="row order-review-total">
                 <div class="order-review-label">@T("Total")</div>
-                <div class="order-review-value">@Model.CurrencyProvider.GetPriceString(Model.GetShopppingTotal())</div>
+                <div class="order-review-value">@Model.CurrencyProvider.GetPriceString(Model.GetShoppingTotal())</div>
             </div>
         </div>
     </fieldset>
