--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/GA4ShippingInfo.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/GA4ShippingInfo.cshtml
@@ -5,15 +5,15 @@
     var _GTMProductService = WorkContext.Resolve<IGTMProductService>();
     Script.Require("NwazetIntegration.TagManager").AtHead();
 
-    var gtmProducts = (IEnumerable<IGAProductVM>)Model.GTMProducts;
-
     var eventName = (string)Model.EventName ?? string.Empty;
 
-    var gtmProductsStrings = gtmProducts
-        .Select(p => _GTMProductService.GetJsonString(p))
-        .Where(s => !string.IsNullOrWhiteSpace(s));
+    var shippingInfoVM = (GA4ShippingInfoVM)Model.ShippingInfoVM;
 
-    var additionalParams = (string)Model.AdditionalParams ?? string.Empty;
+    var products = shippingInfoVM.ProductList;
+
+    var gtmProductsStrings = products
+            .Select(p => _GTMProductService.GetJsonString(p))
+            .Where(s => !string.IsNullOrWhiteSpace(s));
 
     using (Script.Head()) {
         <script type="text/javascript">
@@ -22,7 +22,17 @@
 
             window.GA4Data.ecommerce = $.extend(true, {}, window.GA4Data.ecommerce);
 
-           @if (gtmProductsStrings.Any()) {
+            @if (eventName.Equals("add_shipping_info", StringComparison.InvariantCultureIgnoreCase) && shippingInfoVM != null) {
+                <text>
+                    window.GA4Data.ecommerce.currency = '@Html.Raw(shippingInfoVM.Currency)';
+                    window.GA4Data.ecommerce.value = @Html.Raw(shippingInfoVM.Value);
+                    window.GA4Data.ecommerce.coupon = '@Html.Raw(shippingInfoVM.Coupon)';
+                    window.GA4Data.ecommerce.shipping_tier = '@Html.Raw(shippingInfoVM.ShippingTier)';
+                </text>
+            }
+
+
+            @if (gtmProductsStrings.Any()) {
                 var productString = string.Join(",", gtmProductsStrings);
                 <text>
                     window.GA4Data.ecommerce.items = window.GA4Data.ecommerce.items || [];
