Corrections on add_payment_info GA4 event su get the right selected pos from the original event. Added data-analytics-form="review" to review form definition to get the right form submit event when handling the add_payment_info GA4 event.

--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/Checkout/Review.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/Checkout/Review.cshtml
@@ -19,7 +19,7 @@
     </div>
 }
 @using (Html.BeginFormAntiForgeryPost(
-    Url.Action("Review"), FormMethod.Post, new { @id = "review-form" })) {
+    Url.Action("Review"), FormMethod.Post, new { @id = "review-form", data_analytics_form = "review" })) {
     @*serialized order data*@
     @Html.HiddenFor(m => m.SerializedAddresses)
     @Html.HiddenFor(m => m.BillAtSameShippingAddress)
