Corrections to preserve retrocompatibility with UA.

--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/GTMCheckoutStep.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/GTMCheckoutStep.cshtml
@@ -5,7 +5,7 @@
     var _GTMProductService = WorkContext.Resolve<IGTMProductService>();
     Script.Require("NwazetIntegration.TagManager").AtHead();
 
-    var gtmProducts = (IEnumerable<IGAProductVM>)Model.GTMProducts;
+    var gtmProducts = (IEnumerable<IGAProductVM>)Model.GTMProducts ?? new List<IGAProductVM>();
    
     var gtmActionField = (string)Model.ActionFieldJSON ?? string.Empty;
 
